[gd_scene load_steps=2 format=3 uid="uid://v053ac4efnfd"]

[ext_resource type="Script" path="res://blackjack_control_panel.gd" id="1_6032l"]

[node name="BlackJackControlPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6032l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Hit"

[node name="StandButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Stand"

[node name="PlayAgainButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Play Again"

[connection signal="pressed" from="HBoxContainer/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StandButton" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
